--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,12 @@ perl:
   - "5.20"
   - "5.22"
   - "5.24"
-
+  - "5.26"
+  - "5.12-shrplib"
+  - "5.14-shrplib"
+  - "5.16-shrplib"
+  - "5.18-shrplib"
+  - "5.20-shrplib"
+  - "5.22-shrplib"
+  - "5.24-shrplib"
+  - "5.26-shrplib"
